Puiseux Version 0.01:
---------------------

* [28 Mar 2013] Added displaying of sqrt in puiseux option -l.